recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if (s=1){
         ^Tree:7: error: not found: value doite
      doite(angle)
      ^